# makefile-maker

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  main.c  project_builder.c  project_builder.h
